--- a/style.css
+++ b/style.css
@@ -84,3 +84,42 @@ a {
     
     font-weight: bold;
 }
+
+.information {
+    text-align: center;
+    padding-bottom: 100px;
+}
+
+.information-p {
+    color: #1f2937;
+    font-size: 36px;
+    font-weight: 900;
+    padding: 50px;
+}
+
+.container {
+    /* padding: 80px; */
+    display: flex;
+    gap: 45px;
+    justify-content: center;
+}
+
+.image-1 {
+    display: flex;
+    max-width: 170px;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.image {
+    border-radius: 20px;
+    border: 4px solid #3882f6;
+    width: 160px;
+    height: 170px;
+  }
+
+  .descript {
+    color: rgb(78, 78, 78);
+    font-size: 18px;
+    font-weight: 400;
+  }
