--- a/style.css
+++ b/style.css
@@ -115,11 +115,34 @@ a {
     border-radius: 20px;
     border: 4px solid #3882f6;
     width: 160px;
-    height: 170px;
+    height: 160px;
   }
 
   .descript {
     color: rgb(78, 78, 78);
     font-size: 18px;
     font-weight: 400;
+  }
+
+  .quote {
+    background-color: #E5E7EB;
+    padding: 130px 280px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .quote-p {
+    /* text-align: center; */
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+    color: #1f2937;
+  }
+
+  .quote-p2 {
+    text-align: right;
+    font-size: 24px;
+    font-weight: 500;
+    margin-right: 40px;
   }
